force-app/main/default/objects/Account/fields/Cigna_Demo__c.field-meta.xml
<CustomField>
    <fullName>Cigna_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for testing</description>
    <label>Cigna_Demo</label>
    <type>Checkbox</type>
</CustomField>