force-app/main/default/objects/Account/fields/Demo2_MD__c.field-meta.xml
<CustomField>
    <fullName>Demo2_MD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo2_MD</label>
    <type>Checkbox</type>
</CustomField>