force-app/main/default/objects/Account/fields/demo5555__c.field-meta.xml
<CustomField>
    <fullName>demo5555__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo5555</label>
    <type>Checkbox</type>
</CustomField>