force-app/main/default/objects/Account/fields/external_Id__c.field-meta.xml
<CustomField>
    <fullName>external_Id__c</fullName>
    <externalId>true</externalId>
    <label>external_Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>