force-app/main/default/objects/Account/fields/MD_demo__c.field-meta.xml
<CustomField>
    <fullName>MD_demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sdgfsgesfgfgfghvjvjh</description>
    <inlineHelpText>cscdsvcdsvds</inlineHelpText>
    <label>MD_demo</label>
    <type>Checkbox</type>
</CustomField>