force-app/main/default/objects/Account/fields/Total_Contacts_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Contacts_Count__c</fullName>
    <label>Total_Contacts_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>