force-app/main/default/objects/Account/fields/TotalOpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalOpportunityAmount__c</fullName>
    <label>TotalOpportunityAmount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>