force-app/main/default/objects/Account/fields/Woodmac_Session__c.field-meta.xml
<CustomField>
    <fullName>Woodmac_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for woodmac</description>
    <label>Woodmac_Session</label>
    <type>Checkbox</type>
</CustomField>